<resources>
    <string name="app_name">Creitive</string>

    <string name="button_login">Login</string>
    <string name="editText_insert_mail">Email</string>
    <string name="editText_insert_password">Password</string>
    <string name="textView_id">id</string>
    <string name="textView_title">title</string>
    <string name="textView_description">description</string>
    <string name="textView_single_blog_date">date</string>
    <string name="textView_single_blog_title">title</string>
    <string name="textView_single_blog_author">author</string>
    <string name="textView_single_blog_body">body</string>
    <string name="dialog_box_no_internet_message">To login you need to enable internet</string>
    <string name="dialog_box_ok_button">Ok</string>


</resources>
